--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "prop-types": "^15.5.8"
   },
   "peerDependencies": {
-    "react": "15.x"
+    "react": "16.x"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "nwb": "^0.22.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "16.x",
+    "react-dom": "16.x",
     "react-syntax-highlight": "0.0.6"
   },
   "repository": {
