--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flags-select",
-  "version": "1.1.9",
+  "version": "2.0.0-beta.0",
   "description": "react-flags-select React component",
   "main": "lib/index.js",
   "module": "es/index.js",
